--- a/src/react-app/styles/login.css
+++ b/src/react-app/styles/login.css
@@ -549,6 +549,9 @@ form {
     transition: all 300ms;
     cursor: pointer;
     gap: 8px;
+    font-size: 16px;
+    line-height: 24px;
+    color: #444e5e;
 }
 
 .login-opciones button p {
