Responsividad de subscription

--- a/src/react-app/styles/comparative2.css
+++ b/src/react-app/styles/comparative2.css
@@ -335,6 +335,9 @@
     #planes-mvl {
         display: flex;
     }
+    #feature-comparision {
+        width: auto;
+    }
 }
 
 @media screen and (min-width:1090px) {
